--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-
+}
 html,
 body {
     width: 100%;
@@ -9,17 +9,17 @@ body {
     
 }
 .wrapper {
-    width: auto;
-  margin: 20px;
+    align-items: center;
+    width: 80%;
   padding: 20px;
   font-family: sans-serif;
   background-color: #f9fbfd;
   overflow: hidden;
   margin: auto;
-  background: white;
   border-radius: 5px;
-  box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.4);
   flex-flow: column wrap;
+  box-sizing: border-box;
+  max-height: auto;
 }
   
 .info {
@@ -31,17 +31,10 @@ body {
     margin: 0;
     padding: 10px;
   }
-  .title-section {
-    background: #fd9d08;
-    padding: 2px 10px;
-    color: white;
-  }
+  
   h1 {
     font-size: 1.1rem;
     color: bisque;
-  }
-  .inner-section {
-    padding: 20px;
   }
   .wrapper .password-section {
     position: relative;
@@ -63,32 +56,9 @@ body {
     top: -100%;
     width: 96%;
     text-align: center;
-    color: #333;
+    color: rgb(243, 237, 237);
     opacity: 0;
     transition: all 0.5s ease;
-  }
-  .wrapper .password-section .alert.success {
-    background: rgb(29,161,242, 0.9);
-    opacity: 1;
-  }
-  .wrapper .password-section .alert.fail {
-    background: rgb(230,0,35, 0.9);
-    color: white;
-    opacity: 1;
-  }
-  .wrapper .password-section .copy {
-    height: 100%;
-    width: 50px;
-    background: #e60023;
-    border: 0;
-    color: white;
-    border-radius: 2px;
-    padding: 8px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-  .wrapper .password-section .copy:hover {
-    background: #ff7a00;
   }
   .wrapper .controls {
     text-align: left;
@@ -99,20 +69,20 @@ body {
     padding: 3px;
     border-bottom: 1px solid lightgray;
     width: 100%;
-    margin: 2px;
+    margin: 1px;
   }
   .wrapper .controls .generate {
-    width: 10%;
+    width: 30%;
     border: 0;
     color: white;
-    background: #7e7871;
+    background: #cf1534;
     border-radius: 10px;
     padding: 10px;
     margin-top: 10px;
     transition: all 0.3s ease;
   }
   .wrapper .controls .generate:hover {
-    background: #66615c;
+    background: #db740c;
   }
   #length-box {
     width: 100%;
@@ -143,8 +113,8 @@ body {
     font-size: 0.8rem;
     color: #212121;
     text-align: center;
-    background: #00e676;
-    transition: all 0.3s cubic-bezier(0, 0.82, 1, 1.81);
+    background: #8f1717;
+    transition: all 0.3s;
   }
   
 
@@ -156,22 +126,21 @@ header {
 }
 
 .card {
-  background-color: hsl(0, 0%, 100%);
+  background-color: hsl(0, 81%, 35%);
   border-radius: 5px;
   border-width: 1px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
   color: hsl(206, 17%, 28%);
   font-size: 18px;
   margin: 0 auto;
   max-width: auto;
-  padding: 30px 40px;
+  padding: 0px 40px;
 }
 
 .card-header::after {
     content: " ";
     display: block;
     width: 100%;
-    background: #2b2f33;
+    background: #073c72;
     height: 2px;
   }
 
@@ -187,8 +156,8 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
-  height: 100%;
+  background: #373c41;
+  height: 50%;
 }
 
 .card-footer::after {
@@ -197,66 +166,77 @@ header {
   clear: both;
 }
 
-.btn {
-  border: none;
-  background-color: hsl(360, 91%, 36%);
-  border-radius: 25px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
-    0px;
-  color: hsl(0, 0%, 100%);
-  display: inline-block;
-  font-size: 22px;
-  line-height: 22px;
-  margin: 16px 16px 16px 20px;
-  padding: 14px 34px;
-  text-align: center;
-  cursor: pointer;
-}
-
 button[disabled] {
   cursor: default;
-  background: #c0c7cf;
+  background: #a30f1b;
 }
 
 .float-right {
   float: right;
 }
-
-#password {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border: none;
-  display: block;
-  width: 100%;
-  padding-top: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 85px;
-  font-size: 1.2rem;
-  text-align: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border: 2px dashed #c0c7cf;
-  border-radius: 6px;
-  resize: none;
-  overflow: hidden;
-}
-
-@media (max-width: 690px) {
-  .btn {
-    font-size: 1rem;
-    margin: 16px 0px 0px 0px;
-    padding: 10px 15px;
+   
+.generate {
+    border: none;
+    background-color: hsl(360, 91%, 36%);
+    border-radius: 25px;
+    color: hsl(0, 0%, 100%);
+    display: inline-block;
+    font-size: 22px;
+    line-height: 22px;
+    margin: 16px 16px 16px 20px;
+    padding: 14px;
+    text-align: center;
+    cursor: pointer;
   }
-
+  
+  button[disabled] {
+    cursor: default;
+    background: #c0c7cf;
+  }
+  
+  .float-right {
+    float: right;
+  }
+  
   #password {
-    font-size: 1rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border: none;
+    display: block;
+    width: 100%;
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 85px;
+    font-size: 1.2rem;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 2px dashed #c0c7cf;
+    border-radius: 6px;
+    resize: none;
+    overflow: hidden;
   }
-}
+  
+  @media (max-width: 690px) {
+    .btn {
+      font-size: 1rem;
+      margin: 16px 0px 0px 0px;
+      padding: 10px 15px;
+    }
+  
+    #password {
+      font-size: 1rem;
+    }
+  }
+  
+  @media (max-width: 500px) {
+    .btn {
+      font-size: 0.8rem;
+    }
+  }
+  
+  
 
-@media (max-width: 500px) {
-  .btn {
-    font-size: 0.8rem;
-  }
-}
+
